force-app/main/default/objects/clariti__Deposit__c/clariti__Deposit__c.object-meta.xml
<CustomObject>
    <description>The Deposit allows you to specify, collect and keep track of money collected to satisfy a deposit requirement.</description>
    <label>Deposit</label>
    <nameField>
        <displayFormat>DEP-{MM}{DD}{YYYY}-{000}</displayFormat>
        <label>Deposit Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deposits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>