force-app/main/default/objects/clariti__Deposit__c/fields/clariti__Account__c.field-meta.xml
<CustomField>
    <fullName>clariti__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Deposits</relationshipLabel>
    <relationshipName>Deposits</relationshipName>
    <type>Lookup</type>
</CustomField>