force-app/main/default/objects/clariti__Deposit__c/fields/clariti__APLedgerAccountName__c.field-meta.xml
<CustomField>
    <fullName>clariti__APLedgerAccountName__c</fullName>
    <description>Name of the ledger account used for capturing accounts payable journal entries. A new ledger account will be created with this name if it does not already exist</description>
    <inlineHelpText>Name of the ledger account used for capturing accounts payable journal entries. A new ledger account will be created with this name if it does not already exist</inlineHelpText>
    <label>AP Ledger Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>