force-app/main/default/objects/clariti__Deposit__c/fields/clariti__APLedgerAccountNumber__c.field-meta.xml
<CustomField>
    <fullName>clariti__APLedgerAccountNumber__c</fullName>
    <description>Number of the Accounts Payable Ledger Account. A new ledger account wil be created with this number if it does not already exist.</description>
    <inlineHelpText>Number of the Accounts Payable Ledger Account. A new ledger account wil be created with this number if it does not already exist.</inlineHelpText>
    <label>AP Ledger Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>