force-app/main/default/objects/clariti__Deposit__c/fields/clariti__Application2__c.field-meta.xml
<CustomField>
    <fullName>clariti__Application2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>MUSW__Application2__c</referenceTo>
    <relationshipLabel>Deposits</relationshipLabel>
    <relationshipName>Deposits</relationshipName>
    <type>Lookup</type>
</CustomField>