force-app/main/default/objects/clariti__Deposit__c/fields/clariti__AvailableAmount__c.field-meta.xml
<CustomField>
    <fullName>clariti__AvailableAmount__c</fullName>
    <formula>( clariti__PaidAmount__c +  clariti__TransferredInAmount__c ) - ( clariti__UtilizedAmount__c +  clariti__TransferredOutAmount__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>