force-app/main/default/objects/clariti__Deposit__c/fields/clariti__OutstandingAmount__c.field-meta.xml
<CustomField>
    <fullName>clariti__OutstandingAmount__c</fullName>
    <formula>IF(clariti__RequiredAmount__c = 0, null, IF((clariti__RequiredAmount__c  -  clariti__PaidAmount__c) &lt; 0, 0, clariti__RequiredAmount__c  -  clariti__PaidAmount__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Outstanding Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>