force-app/main/default/objects/clariti__Deposit__c/fields/clariti__PaidAmount__c.field-meta.xml
<CustomField>
    <fullName>clariti__PaidAmount__c</fullName>
    <label>Paid Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>