force-app/main/default/objects/clariti__Deposit__c/fields/clariti__RequiredAmount__c.field-meta.xml
<CustomField>
    <fullName>clariti__RequiredAmount__c</fullName>
    <label>Required Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>