force-app/main/default/objects/clariti__Deposit__c/fields/clariti__TransferNotes__c.field-meta.xml
<CustomField>
    <fullName>clariti__TransferNotes__c</fullName>
    <label>Transfer Notes</label>
    <type>TextArea</type>
</CustomField>