force-app/main/default/objects/clariti__Deposit__c/fields/clariti__TransferredInAmount__c.field-meta.xml
<CustomField>
    <fullName>clariti__TransferredInAmount__c</fullName>
    <description>Total Deposit amount transferred in from another deposit</description>
    <inlineHelpText>Total Deposit amount transferred in from another deposit</inlineHelpText>
    <label>Transferred In Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>