force-app/main/default/objects/clariti__Deposit__c/fields/clariti__TransferredOutAmount__c.field-meta.xml
<CustomField>
    <fullName>clariti__TransferredOutAmount__c</fullName>
    <description>Total Deposit amount transferred out to another deposit</description>
    <inlineHelpText>Total Deposit amount transferred out to another deposit</inlineHelpText>
    <label>Transferred Out Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>