force-app/main/default/objects/clariti__Deposit__c/fields/clariti__Type__c.field-meta.xml
<CustomField>
    <fullName>clariti__Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Security Deposit</fullName>
            </value>
            <value>
                <fullName>Trust Account</fullName>
            </value>
            <value>
                <fullName>Cash Bond</fullName>
            </value>
            <value>
                <fullName>Account Credit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>