force-app/main/default/objects/clariti__Deposit__c/fields/clariti__UtilizedAmount__c.field-meta.xml
<CustomField>
    <fullName>clariti__UtilizedAmount__c</fullName>
    <description>Total Deposit amount utilized as payment method</description>
    <inlineHelpText>Total Deposit amount utilized as payment method</inlineHelpText>
    <label>Utilized Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>