force-app/main/default/objects/clariti__Deposit__c/validationRules/clariti__Currency_Enforce_Decimal_Places.validationRule-meta.xml
<ValidationRule>
    <fullName>clariti__Currency_Enforce_Decimal_Places</fullName>
    <active>true</active>
    <errorConditionFormula>OR(ROUND(clariti__UtilizedAmount__c,2) != clariti__UtilizedAmount__c, ROUND(clariti__TransferredOutAmount__c,2) != clariti__TransferredOutAmount__c, ROUND(clariti__TransferredInAmount__c,2) != clariti__TransferredInAmount__c, ROUND(clariti__RequiredAmount__c,2) != clariti__RequiredAmount__c, ROUND(clariti__RefundedAmount__c,2) != clariti__RefundedAmount__c, ROUND(clariti__PaidAmount__c,2) != clariti__PaidAmount__c)</errorConditionFormula>
    <errorMessage>This is a currency field and can not have more than two decimal places</errorMessage>
</ValidationRule>